SAD-14: Add documentation for new controllers method.
